Fixed bug on mobile

--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ table {
     background-color: rgb(21, 97, 97);
     font-family: monospace;
     cursor: pointer;
+    margin-top: 60px;
+    color: black;
+    font-weight: bolder;
 }
 
 .update:hover {
@@ -128,6 +131,8 @@ table {
     margin-bottom: 20px;
     font-family: monospace;
     cursor: pointer;
+    color: black;
+    font-weight: bolder;
 }
 
 .clear:hover {
@@ -148,12 +153,18 @@ table {
     border-radius: 50%;
     cursor: pointer;
     color: white;
-    background: rgb(21, 97, 97);
+    background: transparent;
     transition: 0.5s ease;
     position: fixed;
     bottom: 5%;
     right: 5%;
     cursor: pointer;
+    text-align: center;
+    /*background color: rgb(21, 97, 97)*/
+}
+
+.add:hover {
+    opacity: 0.8;
 }
 
 .rotate {
@@ -188,7 +199,7 @@ table {
     transition: all 0.6s ease;
     margin-left: 140px;
     margin-top: -40px;
-    background-color: rgb(21, 97, 97);
+    background-color: transparent;
     color: white;
     font-size: 40px;
     border-color: transparent;
@@ -207,6 +218,7 @@ input[type="submit"] {
     border-radius: 5px;
     transition: 0.3s ease;
     font-family: monospace;
+    color: black;
 }
 
 input[type="submit"]:hover {
@@ -270,15 +282,17 @@ input[type="submit"]:hover {
     margin-bottom: 4px;
   }
 
-  .book .update {
-    margin-top: 60px;
-  }
+ 
   
   #userTitle:invalid, #userAuthor:invalid, #pages:invalid {
     border-color: red;
   }
 
   #userTitle::placeholder, #userAuthor::placeholder, #pages::placeholder {
+    color: black;
+  }
+
+  #read {
     color: black;
   }
 
